 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2011-09-03 MickeM
 * Created a protcol buffer free version of the python test script
 * Upgraded to new version of simpleinin class
 * Added new component for python protocol buffer library to installer

2011-09-02 MickeM
 * Fixed several issues in PythonScript
 * PythonScript supports loading multiple instances as well as scripts
 * Added some basic channel test to test.py script (the idea is that this will become "unit tests" eventually)

2011-09-01 MickeM
 * Implemented registration of channels (so no longer faked)
 * Added settings key to change the NSCAAgent channel name
 * Addded proper channel handling to PythonScript module
 * Improved error handling in channels API
 * Rewrote wrapper API to use templates and classes instead of macros (ish)
 * Improved the internal plugin wrapping API to support multiple plugin load
 * Fixed so PythonScript module supports multiple plugin load (with new argument for plugin_id)
 * Added API for registrying routers and handling routing (almost there now)

2011-09-01 MickeM
 * Fixed issue with messages due to new API

2011-08-31 MickeM
 * Added support for loading same plugin twice (in different sessions)
 * Added preliminary support for routing passive checks

2011-08-30 MickeM
 * Fixed uncaught exception in test client
 * Added protocol buffers to source (needs to be added to installer as well)
 * Added example python protocol buffer handler
 * Added lib folder to python scripting (and automagicall load)

2011-08-29 MickeM
 * Fixed some *nix build issues...

2011-08-25 MickeM
 * Fixed some issues in the NSCPClient
 * Fixed debug log issue in core
 * Added support for "pushing" passive checks via NSCP

2011-08-24 MickeM
 * Sever refactoring of the new API (there is now two pb files ipc for NSCP protocol and plugin for plugin communication)